--- a/package.json
+++ b/package.json
@@ -13,12 +13,29 @@
     "ds18b20",
     "temperature"
   ],
+  "devDependencies": {
+    "gulp": "^3.6.0",
+    "gulp-bump": "^1.0.0",
+    "gulp-eslint": "^1.0.0",
+    "gulp-exclude-gitignore": "^1.0.0",
+    "gulp-git": "^1.6.0",
+    "gulp-istanbul": "^0.9.0",
+    "gulp-mocha": "^2.0.0",
+    "gulp-nsp": "^0.4.5",
+    "gulp-plumber": "^1.0.0"
+  },
+  "scripts": {
+    "prepublish": "gulp prepublish",
+    "test": "gulp"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/chamerling/ds18b20.git"
   },
-  "licenses": [{
-    "type": "MIT",
-    "url": "http://mths.be/mit"
-  }]
+  "licenses": [
+    {
+      "type": "MIT",
+      "url": "http://mths.be/mit"
+    }
+  ]
 }
